app/assets/stylesheets/application.css.sass
@import "variables"

@import "bootstrap-sprockets"

@import "bootstrap"

@import "bootswatch"

@import "SocialLogin"

@import "bootstrap-modal-bs3patch"

@import "bootstrap-modal"

@import "bootstrap-tagsinput"

@import "rails_bootstrap_forms"

@import "typeahead"

@import "editable/bootstrap-editable"

.jumbotron header
  margin:
    bottom: 33.16px

.hero-action
  margin:
    bottom: 18.662px

.dropdown-menu
  text-align: center
  width: 100%

.dropdown
  margin:
    bottom: 10.503px

.small
  margin: 5.911px

.intro
  margin:
    bottom: 18px

.tutor-unit
  margin:
    bottom: 44.202px

.mission p
  margin:
    bottom: 18px

.team h2
  margin:
    bottom: 23.994px

.team-member
  margin:
    bottom: 42.635px

@media (min-width: $screen-md-min)
  .tutor-unit
    padding: 20px
    
@media (min-width: $screen-xs-min)
  .team-member
    padding: 70px
    
@media (max-width: $screen-sm-max)
  .btnmain
    text-align: center 
      
body
  padding-top: 60px   

header
  margin-bottom: 0px !important  
  
.jumbotron 
  padding-bottom: 0px !important
  margin-bottom: 0px !important
  background-color: #f3c120 !important
  color: white !important  
  
.half-line 
  line-height: 0.5em
  
.intro
  margin-bottom: 0px !important
  
h1
  margin-top: 0px !important
  
.navbar
  background-color: #4579b3 !important
  
.navbar-collapse
  font-size: 150% !important
  
.btn-primary  
  background-color: #4579b3 !important
  
.btn-info  
  background-color: #00A550 !important  

.bootstrap-tagsinput
  min-width: 50%
  text-align: left

.label-info
  background:
    color: #f3c120  !important

.panel-title
  margin:
    bottom: 28px

.profile-name
  margin:
    bottom: 36px

.profile-photo
  margin:
    bottom: 28px

.panel-group .panel
  margin:
    bottom: 36px

.editable-unsaved
  font:
    style: italic
    weight: normal

@media (max-width: $screen-xs-max)
  .navbar-brand
    width: 75%
    
  input
    font-size: 16px

@media (min-width: $screen-sm-min)
  .profile-photo
    padding-top: 18px
  
  .profile-name
    padding-top: 18px
  

